site/css/edit.css
.segment_box {
    text-align: left;
    width: 100%;
    margin: 0px 0px 10px 0px;
    padding: 0px;
    overflow: hidden;
}

.floating_pane {
    position: fixed;
}

.active_box {
    border: 1px solid #000;
    background-color: #FFFFCC;
}

.inactive_box {
    border: 1px dotted #444;
    background-color: #FFFFFF;
}

.inactive_box:hover {
    border: 1px dotted #444;
    background-color: #E0E0FF;
}

.segment_counter {
    margin: 10px 10px 0px 10px;
    text-decoration: underline;
}

.preedit_box {
    margin: 10px 10px 0px 10px;
    padding: 0px 0px 10px 0px;
    border-bottom: 1px dashed #00F;
    font-size: 16px;
}

.postedit_box {
    margin: 10px;
    padding: 0px;
    font-size: 16px;
}

textarea {
    width: 100%;
    font-size: 16px;
}

.added {
    background-color: #CF9;
    color: #000;
    text-decoration: underline;
}

.removed {
    background-color: #FCC;
    color: #000;
    text-decoration: line-through;
}

.modified {
    background-color: #FF0;
}

.jump-button{
   font-size:14px;
   text-align:center;
   padding:0.1em;
   color:#FFFFFF;
   border-radius:7px;
   border-style:solid;
   border-color:#000000;
   border-width:1px;
   margin-bottom: 1em;
}

.jump-button:hover{
   border-style:solid;
   border-color:orange;
   color:orange;
}

